--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,8 +108,8 @@ jobs:
       - name: Run tests with pytest
         run: pytest tests/ -v --tb=short
 
-      - name: Run tests with coverage
-        run: pytest tests/ --cov=app --cov-report=term-missing --cov-report=xml
+      - name: Run tests with coverage (minimum 80% required)
+        run: pytest tests/ --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=80
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
