Add LinkedIn scraping scripts and update classlist with profile data
- Add HAR parser to extract LinkedIn URLs from network captures
- Add Exa.ai scraper to fetch full profile data (experience, education)
- Add Playwright scraper as alternative method
- Update classlist with 20 LinkedIn URLs and 8 full profiles

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -218,3 +218,7 @@ __marimo__/
 # HAR files (contain sensitive session data)
 *.har
 data/har_files/
+
+# Intermediate scraped/parsed data (regeneratable)
+data/parsed_profiles.json
+data/scraped_profiles_exa.json
