--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -106,10 +106,10 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests with pytest
-        run: pytest tests/ -v --tb=short
+        run: python -m pytest tests/ -v --tb=short
 
       - name: Run tests with coverage (minimum 80% required)
-        run: pytest tests/ --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=80
+        run: python -m pytest tests/ --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=80
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
