--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,9 +5,8 @@ name: CI
 
 on:
   push:
-    branches:
+    branches-ignore:
       - main
-      - backend-setup
   pull_request:
     branches:
       - main
