--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,3 +26,11 @@ repos:
       - id: flake8
         files: ^backend/
         args: ["--config", "backend/.flake8"]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.8.0
+    hooks:
+      - id: mypy
+        files: ^backend/app/
+        pass_filenames: false
+        args: ["--ignore-missing-imports", "backend/app/"]
