--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,3 +31,7 @@ warn_return_any = true
 warn_unused_ignores = true
 disallow_untyped_defs = false
 ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "app.dals.*"
+disable_error_code = ["union-attr", "arg-type", "call-overload", "index", "assignment"]
