--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,10 @@ testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
+filterwarnings = [
+    "ignore:.*:pyparsing.exceptions.PyparsingDeprecationWarning:pyiceberg\\.expressions\\.parser",
+    "ignore:.*:pydantic.warnings.PydanticDeprecatedSince212:pyiceberg\\.table\\.metadata",
+]
 
 [tool.black]
 line-length = 100
