Add DSPy profile summaries with auto-regeneration on profile updates

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,9 @@ SUPABASE_JWT_SECRET=your-jwt-secret
 # Application Settings
 APP_NAME=Memento API
 DEBUG=false
+
+# Optional AI summary generation
+# Set OPENAI_API_KEY and install `dspy-ai` if you want DSPy-generated summaries.
+OPENAI_API_KEY=
+PROFILE_SUMMARY_PROVIDER=auto
+PROFILE_SUMMARY_MODEL=openai/gpt-4o-mini
