--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ click==8.3.1
 coverage==7.13.2
 cryptography==46.0.4
 deprecation==2.1.0
+dspy-ai==3.0.3
 fastapi==0.128.0
 flake8==7.3.0
 fsspec==2026.1.0
