--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,9 @@ charset-normalizer==3.4.4
 click==8.3.1
 coverage==7.13.2
 cryptography==46.0.4
+dnspython==2.8.0
 deprecation==2.1.0
+email-validator==2.3.0
 fastapi==0.128.0
 flake8==7.3.0
 fsspec==2026.1.0
