--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -57,6 +57,7 @@ pytest-asyncio==1.3.0
 pytest-cov==7.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-multipart==0.0.22
 pytokens==0.4.1
 PyYAML==6.0.3
 realtime==2.27.2
