Initial feature commit

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,3 +23,20 @@ DEBUG=false
 OPENAI_API_KEY=
 PROFILE_SUMMARY_PROVIDER=auto
 PROFILE_SUMMARY_MODEL=openai/gpt-4o-mini
+
+# AWS Configuration (for Rekognition facial recognition)
+# Get credentials from AWS IAM console
+AWS_REGION=us-east-2
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+
+# AWS Rekognition Settings
+# Collection ID for storing indexed faces
+REKOGNITION_COLLECTION_ID=memento-faces
+# Minimum confidence threshold for face matches (0-100)
+REKOGNITION_FACE_MATCH_THRESHOLD=80.0
+# Maximum faces to return in search results
+REKOGNITION_MAX_FACES=10
+
+# S3 Bucket for storing profile photos (optional)
+S3_BUCKET_NAME=your-bucket-name
